--- a/src/main/resources/org/openjfx/primary.fxml
+++ b/src/main/resources/org/openjfx/primary.fxml
@@ -4,16 +4,26 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
 <?import javafx.geometry.Insets?>
-
 <?import org.openjfx.MyChart?>
+<?import org.openjfx.MyHeader?>
+<?import org.openjfx.MyGrid?>
+
+<?import javafx.scene.control.TextField?>
+
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.openjfx.PrimaryController">
    <children>
-      <MyChart/>
-      <Label text="Primary View" />
-      <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
+<!--      <MyHeader/>-->
+      <MyGrid fx:id="myGrid"/>
+<!--      <MyChart fx:id="myChart"/>-->
+<!--      <Label text="Primary View" />-->
+<!--      <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>-->
+<!--      <Button fx:id="addClientData" text="Add Data" onAction="#addClientData"/>-->
+
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
 </VBox>
+
+
 
