--- a/src/main/resources/org/openjfx/my_grid.fxml
+++ b/src/main/resources/org/openjfx/my_grid.fxml
@@ -7,8 +7,10 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.text.Text?>
-
 <?import javafx.geometry.Insets?>
+
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml">
    <GridPane fx:id="myGridPane" />
+   <TextField fx:id="ipAddress" text="enter the opponent's IP address"/>
+   <Button fx:id="btnIP"/>
 </fx:root>
