--- a/src/main/resources/org/openjfx/my_grid.fxml
+++ b/src/main/resources/org/openjfx/my_grid.fxml
@@ -1,16 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <?import javafx.scene.text.Text?>
 <?import javafx.geometry.Insets?>
 
-<fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml">
-   <GridPane fx:id="myGridPane" />
-   <TextField fx:id="ipAddress" text="enter the opponent's IP address"/>
-   <Button fx:id="btnIP"/>
-</fx:root>
+<?import javafx.scene.text.Font?>
+<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="org.openjfx.MyGrid">
+    <GridPane fx:id="myGridPane" />
+    <GridPane>
+        <Button fx:id="button1" prefHeight="75.0" prefWidth="75.0"/>
+        <Button fx:id="button2" prefHeight="75.0" prefWidth="75.0"/>
+        <Button fx:id="button3" prefHeight="75.0" prefWidth="75.0"/>
+        <Button fx:id="button4" prefHeight="75.0" prefWidth="75.0"/>
+        <Button fx:id="button5" prefHeight="75.0" prefWidth="75.0"/>
+        <Button fx:id="button6" prefHeight="75.0" prefWidth="75.0"/>
+        <Button fx:id="button7" prefHeight="75.0" prefWidth="75.0"/>
+        <Button fx:id="button8" prefHeight="75.0" prefWidth="75.0"/>
+        <Button fx:id="button9" prefHeight="75.0" prefWidth="75.0"/>
+    </GridPane>
+
+    <children>
+        <Label text="Tictactoe"/>
+        <TextField fx:id="ipAddress"/>
+        <Button fx:id="btnIP" text="Send the opponent's IP address"/>
+        <Button fx:id="btnReset" layoutX="274.0" layoutY="361.0" onAction="#resetGame" text="New Game"/>
+        <Text fx:id="winnerText" layoutX="182.0" layoutY="72.0" text="Let's Play !" textAlignment="CENTER" >
+            <font>
+                <Font size="20" />
+            </font>
+        </Text>
+
+    </children>
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+    </padding>
+</VBox>
