--- a/src/main/resources/org/openjfx/my_grid.fxml
+++ b/src/main/resources/org/openjfx/my_grid.fxml
@@ -8,6 +8,7 @@
 <?import javafx.geometry.Insets?>
 
 <?import javafx.scene.text.Font?>
+<?import org.openjfx.MyGame?>
 <VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1"
       fx:controller="org.openjfx.MyGrid">
     <GridPane fx:id="myGridPane" />
@@ -33,7 +34,6 @@
                 <Font size="20" />
             </font>
         </Text>
-
     </children>
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
